trying to fix header on iphone

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <header>
 
-<div class="key-wrapper">
+<div class="key-wrapper column-left">
 
 <img src="img/illustration-main.svg" alt="a man with a key" class="key">
 
